--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,31 +1,39 @@
 version: '3.8'
 
 services:
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.local
+    volumes:
+      - ./backend:/app
+    ports:
+      - "8000:8000"
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile.local
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
     environment:
       - REACT_APP_API_URL=http://localhost:8000
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    depends_on:
-      - backend
 
-  backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile.local
+  swagger-docs:
+    image: swaggerapi/swagger-ui:latest
+    container_name: swagger-docs
     ports:
-      - "8000:8000"
-    environment:
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ENVIRONMENT=local
+      - "8080:8080"
     volumes:
-      - ./backend:/app 
+      - ./backend/swagger.yaml:/swagger.yaml
+    environment:
+      - SWAGGER_JSON=/swagger.yaml
+      - BASE_URL=/
+      - PORT=8080
+    restart: unless-stopped 
